feat: add Java 11 / Spring Boot 2.x support
  - Add fluxgate-spring-boot2-starter module for Spring Boot 2.7.x (Java 11+)
  - Rename fluxgate-spring-boot-starter to fluxgate-spring-boot3-starter
  - Add fluxgate-sample-standalone-java11 sample application
  - Update CI/CD with multi-JDK testing (Java 11, 17, 21)
  - Adjust JaCoCo coverage thresholds per module
  - Use javax.servlet for Spring Boot 2.x, jakarta.servlet for 3.x